[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Davi Sousa", email = "davigomes4747@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.7", "ruff>=0.9.3", "SQLAlchemy>=2.0.37", "pre-commit>=4.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
