[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Davi Sousa", email = "davigomes4747@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.7", "ruff>=0.9.3", "SQLAlchemy>=2.0.37", "pre-commit>=4.1.0", "alembic>=1.14.1", "psycopg2-binary>=2.9.10", "python-dotenv>=1.0.1", "passlib>=1.7.4", "python-jose>=3.3.0", "google-generativeai>=0.8.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
